--- a/Maestro.csproj
+++ b/Maestro.csproj
@@ -12,6 +12,8 @@
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
     <TargetFrameworkProfile />
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -35,6 +37,9 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="LiteDB, Version=5.0.19.0, Culture=neutral, PublicKeyToken=4ee40123013c9f27, processorArchitecture=MSIL">
+      <HintPath>packages\LiteDB.5.0.19\lib\net45\LiteDB.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net.Http" />
@@ -49,14 +54,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="source\AuthClient.cs" />
-    <Compile Include="source\command\Option.cs" />
-    <Compile Include="source\command\Subcommand.cs" />
-    <Compile Include="source\command\Command.cs" />
-    <Compile Include="source\command\ExecCommand.cs" />
-    <Compile Include="source\command\GetCommand.cs" />
-    <Compile Include="source\command\CommandLine.cs" />
+    <Compile Include="source\commands\get\GetDevices.cs" />
+    <Compile Include="source\commands\Option.cs" />
+    <Compile Include="source\commands\Subcommand.cs" />
+    <Compile Include="source\commands\Command.cs" />
+    <Compile Include="source\commands\ExecCommand.cs" />
+    <Compile Include="source\commands\GetCommand.cs" />
+    <Compile Include="source\commands\CommandLine.cs" />
+    <Compile Include="source\database\LiteDBHandler.cs" />
     <Compile Include="source\entra\EntraIDClient.cs" />
     <Compile Include="source\interfaces\IAuthClient.cs" />
+    <Compile Include="source\interfaces\IDatabaseHandler.cs" />
     <Compile Include="source\intune\IntuneDevice.cs" />
     <Compile Include="source\ROADToken.cs" />
     <Compile Include="source\Util.cs" />
@@ -78,4 +86,11 @@
   <PropertyGroup>
     <PostBuildEvent>scp -i C:\Users\cthompson\.ssh\id_rsa_sccmlab $(TargetDir)* labadmin@aadjoin-intunee.eastus.cloudapp.azure.com:C:\Users\cthompson\git\Maestro\bin\Debug\</PostBuildEvent>
   </PropertyGroup>
+  <Import Project="packages\dnMerge.0.5.15\build\dnMerge.targets" Condition="Exists('packages\dnMerge.0.5.15\build\dnMerge.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('packages\dnMerge.0.5.15\build\dnMerge.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\dnMerge.0.5.15\build\dnMerge.targets'))" />
+  </Target>
 </Project>
