--- a/packages.config
+++ b/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="dnMerge" version="0.5.15" targetFramework="net45" developmentDependency="true" />
+  <package id="LiteDB" version="5.0.19" targetFramework="net45" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net45" />
 </packages>
