--- a/packages.config
+++ b/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="dnMerge" version="0.5.15" targetFramework="net45" developmentDependency="true" />
   <package id="LiteDB" version="5.0.19" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net462" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net45" />
 </packages>
