--- a/Maestro.csproj
+++ b/Maestro.csproj
@@ -61,8 +61,10 @@
     <Compile Include="source\authentication\AuthClient.cs" />
     <Compile Include="source\authentication\Jwt.cs" />
     <Compile Include="source\authentication\RefreshToken.cs" />
+    <Compile Include="source\commands\DeviceQueryCommand.cs" />
+    <Compile Include="source\commands\exec\ExecSyncCommand.cs" />
     <Compile Include="source\commands\ShowCommand.cs" />
-    <Compile Include="source\commands\get\GetDevices.cs" />
+    <Compile Include="source\commands\get\GetDevicesCommand.cs" />
     <Compile Include="source\commands\Option.cs" />
     <Compile Include="source\commands\Subcommand.cs" />
     <Compile Include="source\commands\Command.cs" />
