--- a/Maestro.csproj
+++ b/Maestro.csproj
@@ -61,16 +61,16 @@
     <Compile Include="source\authentication\AuthClient.cs" />
     <Compile Include="source\authentication\Jwt.cs" />
     <Compile Include="source\authentication\RefreshToken.cs" />
-    <Compile Include="source\commands\DeviceQueryCommand.cs" />
+    <Compile Include="source\commands\intune\IntuneExecQueryCommand.cs" />
+    <Compile Include="source\commands\intune\IntuneExecScriptCommand.cs" />
     <Compile Include="source\commands\intune\IntuneCommand.cs" />
     <Compile Include="source\commands\intune\IntuneSyncCommand.cs" />
     <Compile Include="source\commands\ShowCommand.cs" />
-    <Compile Include="source\commands\get\GetDevicesCommand.cs" />
+    <Compile Include="source\commands\intune\IntuneDevicesCommand.cs" />
     <Compile Include="source\commands\Option.cs" />
     <Compile Include="source\commands\Subcommand.cs" />
     <Compile Include="source\commands\Command.cs" />
     <Compile Include="source\commands\intune\IntuneExecCommand.cs" />
-    <Compile Include="source\commands\GetCommand.cs" />
     <Compile Include="source\commands\CommandLine.cs" />
     <Compile Include="source\database\BsonDocumentHandler.cs" />
     <Compile Include="source\database\LiteDBHandler.cs" />
