--- a/Maestro.csproj
+++ b/Maestro.csproj
@@ -61,20 +61,21 @@
     <Compile Include="source\authentication\AuthClient.cs" />
     <Compile Include="source\authentication\Jwt.cs" />
     <Compile Include="source\authentication\RefreshToken.cs" />
-    <Compile Include="source\commands\intune\IntuneExecQueryCommand.cs" />
-    <Compile Include="source\commands\intune\IntuneExecScriptCommand.cs" />
-    <Compile Include="source\commands\intune\IntuneCommand.cs" />
-    <Compile Include="source\commands\intune\IntuneSyncCommand.cs" />
-    <Compile Include="source\commands\ShowCommand.cs" />
-    <Compile Include="source\commands\intune\IntuneDevicesCommand.cs" />
+    <Compile Include="source\commands\entra\EntraCmdHandler.cs" />
+    <Compile Include="source\commands\entra\EntraGroupsCmdHandler.cs" />
+    <Compile Include="source\commands\intune\IntuneExecQueryCmdHandler.cs" />
+    <Compile Include="source\commands\intune\IntuneExecScriptCmdHandler.cs" />
+    <Compile Include="source\commands\intune\IntuneCmdHandler.cs" />
+    <Compile Include="source\commands\intune\IntuneSyncCmdHandler.cs" />
+    <Compile Include="source\commands\intune\IntuneDevicesCmdHandler.cs" />
     <Compile Include="source\commands\Option.cs" />
     <Compile Include="source\commands\Subcommand.cs" />
     <Compile Include="source\commands\Command.cs" />
-    <Compile Include="source\commands\intune\IntuneExecCommand.cs" />
+    <Compile Include="source\commands\intune\IntuneExecCmdHandler.cs" />
     <Compile Include="source\commands\CommandLine.cs" />
     <Compile Include="source\database\BsonDocumentHandler.cs" />
     <Compile Include="source\database\LiteDBHandler.cs" />
-    <Compile Include="source\entra\EntraIDClient.cs" />
+    <Compile Include="source\entra\EntraClient.cs" />
     <Compile Include="source\authentication\IAuthClient.cs" />
     <Compile Include="source\database\IDatabaseHandler.cs" />
     <Compile Include="source\intune\IntuneDevice.cs" />
