--- a/Maestro.csproj
+++ b/Maestro.csproj
@@ -60,7 +60,7 @@
   <ItemGroup>
     <Compile Include="source\authentication\AuthClient.cs" />
     <Compile Include="source\authentication\Jwt.cs" />
-    <Compile Include="source\authentication\RefreshToken.cs" />
+    <Compile Include="source\authentication\OAuthToken.cs" />
     <Compile Include="source\commands\entra\EntraCommand.cs" />
     <Compile Include="source\commands\entra\EntraUsersCommand.cs" />
     <Compile Include="source\commands\intune\IntuneScriptsCommand.cs" />
@@ -81,7 +81,7 @@
     <Compile Include="source\database\IDatabaseHandler.cs" />
     <Compile Include="source\intune\IntuneScript.cs" />
     <Compile Include="source\intune\IntuneDevice.cs" />
-    <Compile Include="source\database\JsonObject.cs" />
+    <Compile Include="source\JsonObject.cs" />
     <Compile Include="source\authentication\ROADToken.cs" />
     <Compile Include="source\output\JsonHandler.cs" />
     <Compile Include="source\util\DateTimeHandler.cs" />
