--- a/Maestro.csproj
+++ b/Maestro.csproj
@@ -76,11 +76,14 @@
     <Compile Include="source\commands\CommandLine.cs" />
     <Compile Include="source\database\BsonDocumentHandler.cs" />
     <Compile Include="source\database\LiteDBHandler.cs" />
+    <Compile Include="source\entra\EntraUser.cs" />
     <Compile Include="source\entra\EntraClient.cs" />
     <Compile Include="source\authentication\IAuthClient.cs" />
     <Compile Include="source\database\IDatabaseHandler.cs" />
+    <Compile Include="source\IGraphClient.cs" />
     <Compile Include="source\intune\IntuneScript.cs" />
     <Compile Include="source\intune\IntuneDevice.cs" />
+    <Compile Include="source\GraphClient.cs" />
     <Compile Include="source\JsonObject.cs" />
     <Compile Include="source\authentication\ROADToken.cs" />
     <Compile Include="source\output\JsonHandler.cs" />
