Entra groups, intune exec app

--- a/Maestro.csproj
+++ b/Maestro.csproj
@@ -61,7 +61,9 @@
     <Compile Include="source\authentication\AuthClient.cs" />
     <Compile Include="source\authentication\Jwt.cs" />
     <Compile Include="source\authentication\OAuthToken.cs" />
+    <Compile Include="source\commands\entra\EntraGroupsCommand.cs" />
     <Compile Include="source\commands\intune\IntuneExecAppCommand.cs" />
+    <Compile Include="source\entra\EntraGroup.cs" />
     <Compile Include="source\GraphRequest.cs" />
     <Compile Include="source\commands\entra\EntraCommand.cs" />
     <Compile Include="source\commands\entra\EntraUsersCommand.cs" />
