--- a/Maestro.csproj
+++ b/Maestro.csproj
@@ -86,10 +86,11 @@
     <Compile Include="source\database\IDatabaseHandler.cs" />
     <Compile Include="source\intune\IntuneScript.cs" />
     <Compile Include="source\intune\IntuneDevice.cs" />
-    <Compile Include="source\GraphClient.cs" />
+    <Compile Include="source\MSGraphClient.cs" />
     <Compile Include="source\JsonObject.cs" />
     <Compile Include="source\authentication\ROADToken.cs" />
     <Compile Include="source\output\JsonHandler.cs" />
+    <Compile Include="source\resourcegraph\ResourceGraphClient.cs" />
     <Compile Include="source\util\DateTimeHandler.cs" />
     <Compile Include="source\util\StringHandler.cs" />
     <Compile Include="source\output\Logger.cs" />
