--- a/Maestro.csproj
+++ b/Maestro.csproj
@@ -36,15 +36,54 @@
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\x64\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <LangVersion>7.3</LangVersion>
+    <ErrorReport>prompt</ErrorReport>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
+    <OutputPath>bin\x64\Release\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <LangVersion>7.3</LangVersion>
+    <ErrorReport>prompt</ErrorReport>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\x86\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>x86</PlatformTarget>
+    <LangVersion>7.3</LangVersion>
+    <ErrorReport>prompt</ErrorReport>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
+    <OutputPath>bin\x86\Release\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>x86</PlatformTarget>
+    <LangVersion>7.3</LangVersion>
+    <ErrorReport>prompt</ErrorReport>
+  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="LiteDB, Version=5.0.19.0, Culture=neutral, PublicKeyToken=4ee40123013c9f27, processorArchitecture=MSIL">
-      <HintPath>packages\LiteDB.5.0.19\lib\net45\LiteDB.dll</HintPath>
+    <Reference Include="LiteDB, Version=5.0.21.0, Culture=neutral, PublicKeyToken=4ee40123013c9f27, processorArchitecture=MSIL">
+      <HintPath>packages\LiteDB.5.0.21\lib\net45\LiteDB.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>packages\Newtonsoft.Json.13.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>packages\System.Buffers.4.5.1\lib\netstandard1.1\System.Buffers.dll</HintPath>
+    </Reference>
     <Reference Include="System.Core" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Numerics" />
@@ -59,46 +98,64 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="source\authentication\AuthClient.cs" />
+    <Compile Include="source\authentication\AccessToken.cs" />
+    <Compile Include="source\authentication\OAuthTokenResponse.cs" />
+    <Compile Include="source\authentication\PrtCookie.cs" />
+    <Compile Include="source\authentication\RequestAADRefreshToken.cs" />
+    <Compile Include="source\authentication\Credential.cs" />
+    <Compile Include="source\authentication\RefreshToken.cs" />
     <Compile Include="source\authentication\Jwt.cs" />
     <Compile Include="source\authentication\OAuthToken.cs" />
-    <Compile Include="source\commands\entra\EntraGroupsCommand.cs" />
-    <Compile Include="source\commands\intune\IntuneExecAppCommand.cs" />
-    <Compile Include="source\commands\token\TokenPrtCommand.cs" />
-    <Compile Include="source\commands\token\TokenAccessCommand.cs" />
-    <Compile Include="source\commands\token\TokenCommand.cs" />
+    <Compile Include="source\commands\LocalCommand.cs" />
+    <Compile Include="source\commands\ExecCommand.cs" />
+    <Compile Include="source\commands\exec\ExecIntuneCommand.cs" />
+    <Compile Include="source\commands\exec\intune\ExecIntuneSyncCommand.cs" />
+    <Compile Include="source\commands\exec\intune\ExecIntuneDeviceQueryCommand.cs" />
+    <Compile Include="source\commands\exec\intune\ExecIntuneScriptCommand.cs" />
+    <Compile Include="source\commands\exec\intune\ExecIntuneAppCommand.cs" />
+    <Compile Include="source\commands\get\GetPrtCookieCommand.cs" />
+    <Compile Include="source\commands\get\entra\GetEntraUsersCommand.cs" />
+    <Compile Include="source\commands\get\entra\GetEntraGroupsCommand.cs" />
+    <Compile Include="source\commands\get\GetEntraCommand.cs" />
+    <Compile Include="source\commands\get\intune\GetIntuneScriptsCommand.cs" />
+    <Compile Include="source\commands\get\intune\GetIntuneDevicesCommand.cs" />
+    <Compile Include="source\commands\ListCommand.cs" />
+    <Compile Include="source\commands\list\ListResourceIdsCommand.cs" />
+    <Compile Include="source\commands\CommandLineOptions.cs" />
+    <Compile Include="source\commands\GetCommand.cs" />
+    <Compile Include="source\commands\get\GetAccessTokenCommand.cs" />
+    <Compile Include="source\commands\get\intune\GetIntuneAppsCommand.cs" />
+    <Compile Include="source\commands\list\ListClientIdsCommand.cs" />
+    <Compile Include="source\commands\show\ShowAccessTokensCommand.cs" />
+    <Compile Include="source\commands\ShowCommand.cs" />
+    <Compile Include="source\commands\StoreCommand.cs" />
+    <Compile Include="source\commands\store\StoreAccessTokenCommand.cs" />
+    <Compile Include="source\database\QueryResult.cs" />
+    <Compile Include="source\entra\EntraDevice.cs" />
     <Compile Include="source\entra\EntraGroup.cs" />
-    <Compile Include="source\GraphRequest.cs" />
-    <Compile Include="source\commands\entra\EntraCommand.cs" />
-    <Compile Include="source\commands\entra\EntraUsersCommand.cs" />
-    <Compile Include="source\commands\intune\IntuneScriptsCommand.cs" />
-    <Compile Include="source\commands\intune\IntuneExecQueryCommand.cs" />
-    <Compile Include="source\commands\intune\IntuneExecScriptCommand.cs" />
-    <Compile Include="source\commands\intune\IntuneCommand.cs" />
-    <Compile Include="source\commands\intune\IntuneSyncCommand.cs" />
-    <Compile Include="source\commands\intune\IntuneDevicesCommand.cs" />
+    <Compile Include="source\commands\get\GetIntuneCommand.cs" />
     <Compile Include="source\commands\Option.cs" />
     <Compile Include="source\commands\Subcommand.cs" />
     <Compile Include="source\commands\Command.cs" />
-    <Compile Include="source\commands\intune\IntuneExecCommand.cs" />
     <Compile Include="source\commands\CommandLine.cs" />
     <Compile Include="source\database\BsonDocumentHandler.cs" />
     <Compile Include="source\database\LiteDBHandler.cs" />
     <Compile Include="source\entra\EntraUser.cs" />
     <Compile Include="source\entra\EntraClient.cs" />
-    <Compile Include="source\authentication\IAuthClient.cs" />
-    <Compile Include="source\database\IDatabaseHandler.cs" />
+    <Compile Include="source\intune\IntuneApp.cs" />
     <Compile Include="source\intune\IntuneScript.cs" />
     <Compile Include="source\intune\IntuneDevice.cs" />
-    <Compile Include="source\JsonObject.cs" />
+    <Compile Include="source\database\JsonObject.cs" />
     <Compile Include="source\authentication\ROADToken.cs" />
     <Compile Include="source\output\JsonHandler.cs" />
     <Compile Include="source\resourcegraph\ResourceGraphClient.cs" />
+    <Compile Include="source\util\MSGraphBatchRequest.cs" />
+    <Compile Include="source\util\MSGraphUrl.cs" />
     <Compile Include="source\util\DateTimeHandler.cs" />
     <Compile Include="source\util\StringHandler.cs" />
     <Compile Include="source\output\Logger.cs" />
     <Compile Include="source\output\ConsoleLogger.cs" />
-    <Compile Include="source\http\HttpHandler.cs" />
-    <Compile Include="source\http\IHttpHandler.cs" />
+    <Compile Include="source\util\HttpHandler.cs" />
     <Compile Include="source\output\ILogger.cs" />
     <Compile Include="source\intune\IntuneClient.cs" />
     <Compile Include="source\Program.cs" />
@@ -108,7 +165,11 @@
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="source\commands\delete\" />
+    <Folder Include="source\commands\local\" />
+    <Folder Include="source\commands\new\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>scp -i C:\Users\cthompson\.ssh\id_rsa_sccmlab $(TargetDir)* labadmin@aadjoin-intunee.eastus.cloudapp.azure.com:C:\Users\cthompson\git\Maestro\bin\Debug\</PostBuildEvent>
