--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,7 @@ on:
       
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: windows-2019
                              
     env:
       Configuration: Release
